tests/rosetta/out/Fortran/canny-edge-detector.error
gfortran: exit status 1
/tmp/canny-edge-detector.f90:34:3:

   34 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/canny-edge-detector.f90:43:14:

   43 |     out = (//)
      |              1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:46:16:

   46 |       row = (//)
      |                1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:96:14:

   96 |     out = (//)
      |              1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:99:16:

   99 |       row = (//)
      |                1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:102:18:

  102 |         g = (((gx(((y)+1),((x)+1)) * gx(((y)+1),((x)+1))) + gy(((y)+1),((x)+1))) * gy(((y)+1),((x)+1)))
      |                  1
Error: Expected a right parenthesis in expression at (1)
/tmp/canny-edge-detector.f90:123:14:

  123 |     out = (//)
      |              1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:126:16:

  126 |       row = (//)
      |                1
Error: Empty array constructor at (1) is not allowed
/tmp/canny-edge-detector.f90:173:16:

  173 |     printMatrix(edges)
      |                1
Error: ‘printmatrix’ at (1) is not a variable
/tmp/canny-edge-detector.f90:170:7:

  170 |     img = reshape((/0,0,0,0,0,0,255,255,255,0,0,255,255,255,0,0,255,255,255,0,0,0,0,0,0/),(/5,5/))
      |       1
Error: Symbol ‘img’ at (1) has no IMPLICIT type
/tmp/canny-edge-detector.f90:151:42:

  151 |   recursive integer function printMatrix(m) result(res)
      |                                          1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘m’ at (1)
/tmp/canny-edge-detector.f90:118:40:

  118 |   recursive integer function threshold(g,t) result(res)
      |                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘g’ at (1)
/tmp/canny-edge-detector.f90:88:41:

   88 |   recursive integer function gradient(img) result(res)
      |                                         1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘img’ at (1)
/tmp/canny-edge-detector.f90:36:39:

   36 |   recursive integer function conv2d(img,k) result(res)
      |                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘img’ at (1)
/tmp/canny-edge-detector.f90:36:41:

   36 |   recursive integer function conv2d(img,k) result(res)
      |                                         1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘k’ at (1)
/tmp/canny-edge-detector.f90:172:22:

  172 |     edges = threshold(g,(1020 * 1020))
      |                      1
Error: Expected a procedure for argument ‘g’ at (1)
/tmp/canny-edge-detector.f90:172:12:

  172 |     edges = threshold(g,(1020 * 1020))
      |            1
Error: Type mismatch in argument ‘t’ at (1); passed INTEGER(4) to REAL(4)
/tmp/canny-edge-detector.f90:121:13:

  121 |     h = size(g)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:122:13:

  122 |     w = size(g(((0)+1)))
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:144:6:

  144 |       app6(size(out)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/canny-edge-detector.f90:148:4:

  148 |     res = out
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/canny-edge-detector.f90:159:16:

  159 |         line = (line + s7)
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/canny-edge-detector.f90:160:23:

  160 |         if (((x < size(m(((0)+1)))) - 1)) then
      |                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:157:26:

  157 |       do while ((x < size(m(((0)+1)))))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:154:24:

  154 |     do while ((y < size(m)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:92:20:

   92 |     gx = conv2d(img,hx)
      |                    1
Error: Rank mismatch in argument ‘k’ at (1) (scalar and rank-2)
/tmp/canny-edge-detector.f90:39:13:

   39 |     h = size(img)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:40:13:

   40 |     w = size(img(((0)+1)))
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:41:13:

   41 |     n = size(k)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:81:6:

   81 |       app1(size(out)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/canny-edge-detector.f90:85:4:

   85 |     res = out
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/canny-edge-detector.f90:93:20:

   93 |     gy = conv2d(img,hy)
      |                    1
Error: Rank mismatch in argument ‘k’ at (1) (scalar and rank-2)
/tmp/canny-edge-detector.f90:94:13:

   94 |     h = size(img)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:95:13:

   95 |     w = size(img(((0)+1)))
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/canny-edge-detector.f90:111:6:

  111 |       app3(size(out)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/canny-edge-detector.f90:115:4:

  115 |     res = out
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
